--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@stripe/stripe-js",
-  "version": "5.6.0",
+  "name": "@niteshthakur5/stripe-js",
+  "version": "5.6.1",
   "description": "Stripe.js loading utility",
-  "repository": "github:stripe/stripe-js",
+  "repository": "niteshthakur5:stripe/stripe-js",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "jsnext:main": "lib/index.mjs",
